# vllm-monitor

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml
scripts/: screenshot.py
src/vllm_monitor/: app.py  metrics.py
tests/: test_app.py  test_metrics.py
