[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-monitor"
version = "1.0.2"
description = "Real-time terminal UI dashboard for monitoring vLLM server metrics"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Dennis Reichenberg" }]
maintainers = [{ name = "Tomas Kirnak" }]
keywords = ["vllm", "llm", "monitor", "tui", "dashboard", "ai", "metrics", "textual"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "textual>=0.61",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio", "ruff", "mypy", "textual-dev"]

[project.scripts]
vllm-monitor = "vllm_monitor.cli:app"

[project.urls]
Homepage = "https://github.com/tomaskir/vllm-monitor"
Repository = "https://github.com/tomaskir/vllm-monitor"
Issues = "https://github.com/tomaskir/vllm-monitor/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
